--- a/discord.css
+++ b/discord.css
@@ -4,20 +4,49 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'gg-sans';
+  src: url('/assets/font/gg sans Regural.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'gg-sans';
+  src: url('/assets/font/gg sans Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'gg-sans';
+  src: url('/assets/font/gg sans Semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'gg-sans';
+  src: url('/assets/font/gg sans Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: bold;
+}
+
 body {
-  font-family: "Arial", sans-serif;
-  background: linear-gradient(135deg, #000000 0%, #2a34b1 100%);
+  background: linear-gradient(135deg, #000000 0%, #455ad4 100%);
   color: white;
   min-height: 100vh;
+  font-family: 'gg-sans', sans-serif;
 }
 
 /* Navbar */
 .header {
-  padding: 20px 50px;
+  padding: 20px 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background: transparent;
+  margin-top: 0.5rem;
 }
 
 .navbar {
@@ -42,7 +71,7 @@ body {
   font-size: 1rem;
   font-weight: 600;
   transition: background-color 0.3s ease;
-  padding: 0.7rem 1rem;
+  padding: 0.8rem;
   border-radius: 10px;
 }
 
@@ -62,8 +91,12 @@ body {
 }
 
 .nav-buttons {
-  display: flex;
+  display: none;
   align-items: center;
+}
+
+.nav-buttons1 {
+  display: block;
 }
 
 .mobile-header {
@@ -100,14 +133,16 @@ body {
 }
 
 .hero-text {
-  max-width: 50%;
-  padding: 0 3rem;
+  max-width: 42%;
+  padding: 0 3.5rem;
 }
 
 .hero-text h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  margin-bottom: 20px;
+  font-size: 4rem;
+  font-weight: bolder;
+  margin-bottom: 30px;
+  line-height: .8;
+  text-transform: uppercase;
 }
 
 .hero-text p {
@@ -119,15 +154,17 @@ body {
   display: flex;
   justify-content: center;
   gap: 2rem;
+  margin-top: 3rem;
 }
 
 .btn-1 {
   background-color: white;
   color: black;
-  padding: 1rem 1.3rem;
-  border-radius: 8px;
-  font-weight: 700;
+  padding: 1.3rem 1.7rem;
+  border-radius: 12px;
+  font-weight: normal;
   cursor: pointer;
+  font-size: 1.2rem;
 }
 
 .btn-1:hover {
@@ -136,10 +173,11 @@ body {
 
 .btn-2 {
   background-color: #5865f2;
-  padding: 1rem 1.3rem;
-  border-radius: 8px;
-  font-weight: 700;
+  padding: 1.3rem 1.7rem;
+  border-radius: 12px;
+  font-weight: normal;
   cursor: pointer;
+  font-size: 1.2rem;
 }
 
 .btn-2:hover {
@@ -163,10 +201,10 @@ body {
 }
 
 .fun-chat-section {
-  padding: 20px;
+  padding: 10px;
   width: 80%;
   background: rgba(255, 255, 255, 0.1);
-  border-radius: 60px;
+  border-radius: 120px;
   margin: 0 auto;
   margin-bottom: 7rem;
   color: white;
@@ -180,7 +218,7 @@ body {
 }
 
 .gif {
-  width: 80%;
+  width: 70%;
   display: flex;
   margin-top: 10rem;
   justify-content: flex-end;
@@ -200,7 +238,7 @@ body {
 }
 
 .fun-chat-left {
-  flex: 0 0 65%;
+  flex: 0 0 63%;
 }
 
 .fun-chat-right {
@@ -209,8 +247,8 @@ body {
 
 .fun-chat-video {
   width: 100%;
-  max-width: 700px;
-  border-radius: 30px;
+  max-width: 735px;
+  border-radius: 100px;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
 }
 
@@ -219,14 +257,36 @@ body {
 }
 
 .fun-chat-right h2 {
-  font-size: 2.5rem;
-  font-weight: 800;
+  font-size: 3.2rem;
+  font-weight: bolder;
   margin-bottom: 20px;
+  line-height: .8;
+  text-transform: uppercase;
+}
+
+.fun-chat-right1 {
+  text-align: left;
+  padding-left: 20px;
+}
+
+.fun-chat-right1 h2 {
+  font-size: 3.2rem;
+  font-weight: bolder;
+  margin-bottom: 20px;
+  line-height: .8;
+  text-transform: uppercase;
+}
+
+.fun-chat-right1 p {
+  font-size: 1.1rem;
+  line-height: 1.2;
+  padding-right: 2rem;
 }
 
 .fun-chat-right p {
   font-size: 1.1rem;
   line-height: 1.6;
+  padding-right: 2rem;
 }
 
 .tape-container {
@@ -240,7 +300,7 @@ body {
 .tape-line {
   display: flex;
   gap: 3rem;
-  animation: scrollTape 20s linear infinite;
+  animation: scrollTape 10s linear infinite;
   font-size: 3.5rem;
   font-weight: 900;
   text-transform: uppercase;
@@ -266,16 +326,16 @@ body {
 }
 
 .text p {
-  font-weight: 900;
-  font-size: 3.8rem;
+  font-weight: bolder;
+  font-size: 3.6rem;
 }
 
 .text button {
   background-color: white;
   color: black;
-  padding: 1rem 1.3rem;
-  border-radius: 8px;
-  font-weight: 700;
+  padding: 1.3rem 1.5rem;
+  border-radius: 15px;
+  font-weight: normal;
   cursor: pointer;
   font-size: 1.3rem;
   margin: 2rem 0;
@@ -298,7 +358,7 @@ body {
 
 .footer-bg1 {
   position: absolute;
-  top: 19%;
+  top: 22%;
   left: 58%;
   transform: translateX(-50%);
   z-index: 2;
@@ -316,9 +376,9 @@ body {
   font-family: sans-serif;
 }
 
-.custom-footer p {
-  font-weight: bolder;
-  font-size: 25rem;
+.custom-footer span img {
+  width: 100%;
+  padding: 10px;
 }
 
 .footer-container {
@@ -357,6 +417,9 @@ body {
   color: white;
 }
 
+.language-selector option {
+  padding: 1.2rem;
+}
 
 .social-icons {
   display: flex;
@@ -435,7 +498,13 @@ body {
 
   .mobile-header {
     display: flex;
-    gap: 15px;
+    /* gap: 210px; */
+  }
+
+  .discord-logo {
+    width: 30px;
+    height: 30px;
+    /* display: none; */
   }
 
   .nav-container {
@@ -491,6 +560,14 @@ body {
     margin-top: 20px;
   }
 
+  .nav-buttons1 {
+    display: none;
+  }
+
+  .nav-buttons {
+    display: block;
+  }
+
   .login-btn {
     width: 100%;
     background-color: inherit;
@@ -513,7 +590,7 @@ body {
 
 @media (max-width: 768px) {
   .header {
-    padding: 20px;
+    padding: 10px;
   }
 
   .hero-text h1 {
@@ -528,7 +605,8 @@ body {
     font-weight: bolder;
     font-size: 6.1rem;
   }
-  .custom-footer{
+
+  .custom-footer {
     padding: 0;
     margin-top: 2.8rem;
   }
@@ -538,6 +616,12 @@ body {
     text-align: center;
   }
 
+  .discord-logo {
+    width: 30px;
+    height: 30px;
+    display: block;
+  }
+
   .text p {
     font-weight: 900;
     font-size: 2.8rem;
@@ -545,9 +629,17 @@ body {
 
   .fun-chat-section {
     width: 90%;
-
+    border-radius: 80px;
   }
-  .discordlogo{
+  .fun-chat-video{
+    border-radius: 50px;
+  }
+
+  .fun-chat-right1 h2{
+    padding-top: 10px;
+  }
+
+  .discordlogo {
     padding-top: 2rem;
   }
 
