--- a/discord.css
+++ b/discord.css
@@ -60,7 +60,7 @@ body {
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 15px;
   justify-content: center;
   margin: 10px 0;
 }
@@ -123,6 +123,53 @@ body {
   background: transparent;
   border: none;
   color: white;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.dropdown {
+  position: relative;
+}
+
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 160%;
+  left: 0;
+  background-color: #3939af;
+  padding: 10px 0;
+  border-radius: 8px;
+  min-width: 150px;
+  z-index: 999;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu li {
+  padding: 0;
+  list-style: none;
+}
+
+.dropdown-menu li a {
+  display: block;
+  padding: 10px 15px;
+  color: white;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.dropdown-menu li a:hover {
+  background-color: #5865f2;
+  border-radius: 5px;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
 }
 
 .hero {
@@ -193,12 +240,6 @@ body {
   display: none;
 }
 
-.nav-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-grow: 1;
-}
 
 .fun-chat-section {
   padding: 10px;
@@ -535,6 +576,7 @@ body {
     flex-direction: column;
     width: 100%;
     gap: 0;
+    overflow-y: scroll;
   }
 
   .nav-links li {
@@ -573,6 +615,27 @@ body {
     background-color: inherit;
     color: white;
     border: 2px solid white;
+  }
+
+  .dropdown-menu {
+    display: none;
+    position: relative;
+    background-color: transparent;
+    box-shadow: none;
+    padding-left: 1rem;
+  }
+
+  .dropdown.open .dropdown-menu {
+    display: block;
+  }
+
+  .dropdown-menu li a {
+    padding: 10px 0;
+    color: white;
+  }
+
+  .dropdown:hover .dropdown-menu {
+    display: none;
   }
 
   .btn {
@@ -620,6 +683,8 @@ body {
     width: 30px;
     height: 30px;
     display: block;
+    position: relative;
+    top: -70px;
   }
 
   .text p {
@@ -631,11 +696,12 @@ body {
     width: 90%;
     border-radius: 80px;
   }
-  .fun-chat-video{
+
+  .fun-chat-video {
     border-radius: 50px;
   }
 
-  .fun-chat-right1 h2{
+  .fun-chat-right1 h2 {
     padding-top: 10px;
   }
 
@@ -666,5 +732,31 @@ body {
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
+  }
+
+  .dropdown-menu {
+    display: none;
+    position: relative;
+    background-color: transparent;
+    box-shadow: none;
+    padding-left: 1rem;
+    top: 0;
+  }
+
+  .dropdown-menu li a {
+    padding: 0;
+  }
+
+  .dropdown.open .dropdown-menu {
+    display: block;
+  }
+
+  .dropdown-menu li a {
+    padding: 10px 0;
+    color: white;
+  }
+
+  .dropdown:hover .dropdown-menu {
+    display: block
   }
 }
